# argus-distribution

./: .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt  argus_cloth.cpp
cmake/modules/: FindGLFW3.cmake
conf/: cards_high_friction.json  cards_low_friction.json  drag_cloth.json
examples/: argus.py  belt_high_tension.py  box_and_cone.py  cards_high_friction.py  cards_low_friction.py  drag_cloth.py
src/: ArgusDistributionConfig.cmake.in  CMakeLists.txt
src/applications/: application.h  arcsim_application.cpp  arcsim_application.h
src/display/: camera.h  display_helper.h  drawable.cpp  drawable.h  interface.h  shader.h  timestep.h
src/integrators/: bogus_integrator.cpp  bogus_integrator.h  integrator.h
src/simulators/: arc_simulator.cpp  arc_simulator.h  simulator.h
